argo/misc-ai/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      serviceAccountName: sa
      containers:
      - image: ghcr.io/thr3a/misc-ai:10
        resources: {}
        imagePullPolicy: IfNotPresent
        name: web
        command: ['node', 'server.js']
        ports:
        - containerPort: 3000
